clean up before transposition table bug fix *sigh*

--- a/.gitignore
+++ b/.gitignore
@@ -2,22 +2,5 @@
 .gdb_history
 compile_commands.json
 chess-engine
-
-obj/src/Evalutation.d
-obj/src/Evalutation.o
-obj/src/FEN.d
-obj/src/FEN.o
-obj/src/GameState.d
-obj/src/GameState.o
-obj/src/GetAttack.d
-obj/src/GetAttack.o
-obj/src/Move.d
-obj/src/Move.o
-obj/src/MoveGeneration.d
-obj/src/MoveGeneration.o
-obj/src/UCI.d
-obj/src/UCI.o
-obj/src/main.d
-obj/src/main.o
-chess-engine.profdata
-chess-engine.profraw
+obj/*
+perf.data.old
